; ModuleID = '/home/carl/AnghaBench/linux/drivers/lightnvm/extr_pblk-rb.c_pblk_rb_sync_l2p.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/lightnvm/extr_pblk-rb.c_pblk_rb_sync_l2p.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pblk_rb = type { i32, i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @pblk_rb_sync_l2p(%struct.pblk_rb* %0) #0 {
  %2 = alloca %struct.pblk_rb*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store %struct.pblk_rb* %0, %struct.pblk_rb** %2, align 8
  %5 = load %struct.pblk_rb*, %struct.pblk_rb** %2, align 8
  %6 = getelementptr inbounds %struct.pblk_rb, %struct.pblk_rb* %5, i32 0, i32 0
  %7 = call i32 @spin_lock(i32* %6)
  %8 = load %struct.pblk_rb*, %struct.pblk_rb** %2, align 8
  %9 = getelementptr inbounds %struct.pblk_rb, %struct.pblk_rb* %8, i32 0, i32 3
  %10 = call i32 @smp_load_acquire(i32* %9)
  store i32 %10, i32* %3, align 4
  %11 = load i32, i32* %3, align 4
  %12 = load %struct.pblk_rb*, %struct.pblk_rb** %2, align 8
  %13 = getelementptr inbounds %struct.pblk_rb, %struct.pblk_rb* %12, i32 0, i32 2
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.pblk_rb*, %struct.pblk_rb** %2, align 8
  %16 = getelementptr inbounds %struct.pblk_rb, %struct.pblk_rb* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @pblk_rb_ring_count(i32 %11, i32 %14, i32 %17)
  store i32 %18, i32* %4, align 4
  %19 = load %struct.pblk_rb*, %struct.pblk_rb** %2, align 8
  %20 = load i32, i32* %4, align 4
  %21 = call i32 @__pblk_rb_update_l2p(%struct.pblk_rb* %19, i32 %20)
  %22 = load %struct.pblk_rb*, %struct.pblk_rb** %2, align 8
  %23 = getelementptr inbounds %struct.pblk_rb, %struct.pblk_rb* %22, i32 0, i32 0
  %24 = call i32 @spin_unlock(i32* %23)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @smp_load_acquire(i32*) #1

declare dso_local i32 @pblk_rb_ring_count(i32, i32, i32) #1

declare dso_local i32 @__pblk_rb_update_l2p(%struct.pblk_rb*, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
